plugins {
  id 'application'
  id 'jacoco'
  id 'checkstyle'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '3.3.0'
  id 'org.owasp.dependencycheck' version '12.1.0'
  id 'com.github.ben-manes.versions' version '0.52.0'
  id 'org.sonarqube' version '6.2.0.5505'
  id 'pmd'
}

group = 'uk.gov.hmcts.ethos.ecm'
version = '0.0.1'

checkstyle {
  maxWarnings = 0
  toolVersion = '10.26.1'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

jacocoTestReport {
  executionData(test)
  reports {
    xml.required = true
    csv.required = false
    xml.outputLocation = layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml")
  }
}

def sonarExclusions = ['**/uk/gov/hmcts/reform/ethos/ecm/consumer/config/**',
                       '**/uk/gov/hmcts/reform/ethos/ecm/consumer/model/**',
                       '**/uk/gov/hmcts/reform/ethos/ecm/consumer/domain/**',
                       '**/uk/gov/hmcts/reform/ethos/ecm/consumer/tasks/**',
                       '**/uk/gov/hmcts/reform/ethos/ecm/consumer/Application'
]

sonarqube {
  properties {
    property "sonar.exclusions", sonarExclusions.join(', ')
    property "sonar.projectKey", "ecm-consumer"
    property "sonar.dynamicAnalysis", "reuseReports"
    property "sonar.dependencyCheck.reportPath", "${project.buildDir}/reports/dependency-check-report.xml"
    property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco-reports.xml"
  }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport

sourceSets {
  test {
    java.srcDir 'src/test/java'
  }

  functional {
    java.srcDir 'src/test/functional/java'
    resources.srcDir 'src/test/functional/resources'
    compileClasspath += main.output + test.output
    runtimeClasspath += main.output + test.output
  }
}

configurations {
  functionalImplementation.extendsFrom testImplementation
  functionalRuntimeOnly.extendsFrom testRuntimeOnly
}

test {
  useJUnitPlatform()
  exclude '**/*ComponentTest*'
}

tasks.register('smoke', Test) {
  testClassesDirs = sourceSets.functional.output.classesDirs
  classpath = sourceSets.functional.runtimeClasspath

  useJUnit {
    includeCategories 'uk.gov.hmcts.reform.ethos.ecm.consumer.functional.SmokeTest'
  }
}

tasks.register('functional', Test) {
  testClassesDirs = sourceSets.functional.output.classesDirs
  classpath = sourceSets.functional.runtimeClasspath

  useJUnit {
    includeCategories 'uk.gov.hmcts.reform.ethos.ecm.consumer.functional.SmokeTest'
    includeCategories 'uk.gov.hmcts.reform.ethos.ecm.consumer.functional.HealthCheckTest'
  }
  maxHeapSize = '1G'
}

tasks.register('fortifyScan', JavaExec) {
  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
  // range of 0-10 fails the build, anything greater and it doesn't fail the build
  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
  suppressionFile = 'config/owasp/suppressions.xml'

  analyzers {
    // Disable scanning of .NET related binaries
    assemblyEnabled = false
  }

  analyzers.nodeAudit.yarnEnabled = false

}

repositories {
  mavenLocal()
  mavenCentral()
  maven { url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1") }
}

ext {
  junitJupiterVersion = '5.10.2'
  feignVersion = '13.6'
  junitPlatform = '1.6.2'
  log4JVersion = '2.24.3'
  logbackVersion = '1.5.21'
  serenity = '4.0.24'
  tomcatEmbedVersion = '10.1.44'
  nettyVersion = '4.2.4.Final'
  springCloudVersion = '2023.0.4'
}

ext["rest-assured.version"] = '5.1.0'

dependencies {

  implementation group: 'com.github.hmcts', name: 'ecm-common', version: '3.0.1'
  implementation group: 'com.github.hmcts', name: 'ecm-data-model', version: '2.0.4'
  implementation group: 'com.github.hmcts', name: 'et-data-model', version: '4.3.4'

  //To Remove vulnerabilities CVE-2023-31582, CVE-2023-4586
  dependencyManagement {
    imports {
      mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
    dependencies {
      dependencySet(group: 'io.netty', version: '4.2.7.Final') {
        entry 'netty-buffer'
        entry 'netty-codec'
        entry 'netty-codec-http'
        entry 'netty-codec-socks'
        entry 'netty-common'
        entry 'netty-handler'
        entry 'netty-handler-proxy'
        entry 'netty-resolver'
        entry 'netty-transport'
        entry 'netty-transport-native-epoll'
        entry 'netty-transport-native-kqueue'
        entry 'netty-transport-native-unix-common'
        entry 'netty-transport-classes-epoll'
        entry 'netty-transport-classes-kqueue'
      }
    }
  }

  dependencyManagement {
    dependencies {
      dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
      // CVE-2018-10237 - Unbounded memory allocation
      dependencySet(group: 'com.google.guava', version: '33.4.5-jre') {
        entry 'guava'
      }
    }
  }

  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
  implementation group: 'com.google.code.gson', name: 'gson', version: '2.13.2'
  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.20.1'
  implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.5.1'
  implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5', version: '5.3.6'
  implementation group: 'ch.qos.logback', name: 'logback-core', version: logbackVersion
  implementation group: 'ch.qos.logback', name: 'logback-classic', version: logbackVersion
  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '10.6'
  implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: feignVersion
  implementation group: 'io.github.openfeign', name: 'feign-core', version: feignVersion
  implementation group: 'net.minidev', name: 'accessors-smart', version: '2.6.0'
  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'

  implementation group: 'junit', name: 'junit', version: '4.13.2'
  implementation group: 'net.javacrumbs.shedlock', name: 'shedlock-spring', version: '6.10.0'
  implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.28.0'
  implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.5.0'
  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.19.0'
  implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
  implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.6'
  implementation group: 'org.apache.santuario', name: 'xmlsec', version: '4.0.4'
  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: tomcatEmbedVersion
  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: tomcatEmbedVersion

  //to remove CVEs
  implementation group: 'org.apache.xmlgraphics', name: 'batik-all', version: '1.19', ext: 'pom'
  implementation group: 'org.apache.xmlgraphics', name: 'xmlgraphics-commons', version: '2.11'
  implementation group: 'commons-net', name: 'commons-net', version: '3.12.0'
  implementation group: 'com.fasterxml.woodstox', name: 'woodstox-core', version: '7.1.1'

  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'
  implementation group: 'net.minidev', name: 'accessors-smart', version: '2.6.0'
  implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '6.2.2'
  implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'

  implementation('org.elasticsearch:elasticsearch') {
    version {
      strictly '7.17.4'
    }
  }

  implementation group: 'com.squareup.okio', name: 'okio', version: '3.16.3'
  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.8'
  // CVE-2022-25857
  implementation group: 'org.yaml', name: 'snakeyaml', version: '2.5'

  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.8.0'
  implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.6.0'
  implementation group: 'com.microsoft.azure', name: 'adal4j', version: '1.6.7'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-webflux'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-configuration-processor'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
  implementation 'org.springframework.retry:spring-retry'
  implementation group: 'org.testng', name: 'testng', version: '7.11.0'
  implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '5.2.1-RELEASE'
  implementation 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  testImplementation group: 'com.auth0', name: 'java-jwt', version: '4.5.0'
  testImplementation 'com.github.hmcts:fortify-client:1.4.10'
  testImplementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
  testImplementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
  testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: serenity
  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: serenity
  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: serenity, {
    exclude module: 'jaxb-osgi'
  }
  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: serenity
  testImplementation (group: 'org.docx4j', name: 'docx4j', version: '6.1.2') {
    exclude module: 'slf4j-log4j12'
  }
  testImplementation 'org.mockito:mockito-junit-jupiter:5.20.0'

}

application {
  mainClass = 'uk.gov.hmcts.reform.ethos.ecm.consumer.Application'
}

bootJar {
  getArchiveFileName().set(provider {
    'ecm-consumer.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}
